--- a/Recomendation_Movies.ipynb
+++ b/Recomendation_Movies.ipynb
@@ -42,7 +42,7 @@
    ],
    "source": [
     "import pandas as pd\n",
-    "df = pd.read_csv(r'C:\\Users\\tulih\\Desktop\\Project\\Python\\movies.csv')\n",
+    "df = pd.read_csv(r'C:\\Users\\Desktop\\Project\\Python\\movies.csv')\n",
     "print(df)"
    ]
   },
@@ -330,7 +330,7 @@
     }
    ],
    "source": [
-    "ratings = pd.read_csv(r'C:\\Users\\tulih\\Desktop\\Project\\Python\\ratings.csv')\n",
+    "ratings = pd.read_csv(r'C:\\Users\\Desktop\\Project\\Python\\ratings.csv')\n",
     "print(ratings)\n"
    ]
   },
