--- a/Recomendation_Movies.ipynb
+++ b/Recomendation_Movies.ipynb
@@ -996,7 +996,7 @@
     "            results = search(title)\n",
     "            if not results.empty:\n",
     "                movie_id = results.iloc[0][\"movieId\"]\n",
-    "                display(find_similar_movies(movie_id))  # Fixed typo here\n",
+    "                display(find_similar_movies(movie_id))  \n",
     "\n",
     "movie_name_input.observe(on_type, names='value')\n",
     "\n",
@@ -1011,7 +1011,7 @@
     "    all_user_other = all_users[\"movieId\"].value_counts() / len(all_users[\"userId\"].unique())\n",
     "    reco_percentages = pd.concat([similar_user_other, all_user_other], axis=1)\n",
     "\n",
-    "    # Update the column names below according to your actual DataFrame columns\n",
+    "    \n",
     "    reco_percentages.columns = ['similar person', 'average person']  # Corrected the column names\n",
     "\n",
     "    # Adjust the calculation based on the actual columns you want to use\n",
