--- a/Recomendation_Movies.ipynb
+++ b/Recomendation_Movies.ipynb
@@ -1012,9 +1012,9 @@
     "    reco_percentages = pd.concat([similar_user_other, all_user_other], axis=1)\n",
     "\n",
     "    \n",
-    "    reco_percentages.columns = ['similar person', 'average person']  # Corrected the column names\n",
+    "    reco_percentages.columns = ['similar person', 'average person']  \n",
     "\n",
-    "    # Adjust the calculation based on the actual columns you want to use\n",
+    "    \n",
     "    reco_percentages[\"Difference score\"] = reco_percentages[\"average person\"] / reco_percentages[\"similar person\"] \n",
     "    reco_percentages = reco_percentages.sort_values(\"Difference score\", ascending=True)\n",
     "    return reco_percentages.head(10).merge(df, left_index=True, right_on=\"movieId\")[[\"Difference score\", \"title\", \"genres\"]]\n"
